# Moirai

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Main.cpp  Moirai.sln  Moirai.vcxproj  Moirai.vcxproj.filters  Readme.md  Shader.h  main.cpp
Libraries/include/glad/: glad.h
Moirai/Headers/: Renderer.h  Shader.h  Texture.h  UserInterface.h  Window.h
Moirai/Resources/backpack/: backpack2.mtl
Moirai/Resources/meshes/: plane.mtl
Moirai/Shaders/: ColorPhong.frag  ColorPhong.vert  LightSource.frag  LightSource.vert  Phong.frag  TexturePhong.frag  TexturePhong.vert  shader.frag  shader.vert
Moirai/Sources/: Camera.cpp  Main.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  UserInterface.cpp  Window.cpp
Moirai/Src/: Camera.h  Light.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.h  TextureComponent.cpp  TextureComponent.h  UserInterface.cpp  UserInterface.h  Vertex.h  VertexUtils.h  Window.cpp
Moirai/Src/Components/: MeshRenderer.h  PointLight.h  Renderer.h  TextureComponent.h  Transform.h
Moirai/Src/Renderer/: FrameBuffer.cpp  FrameBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Moirai/Src/Systems/: MeshRendererSystem.cpp  MeshRendererSystem.h  RendererSystem.cpp  RendererSystem.h
resources/shaders/: shader.frag
src/: Main.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  main.cpp
src/lib/: glad.c
